--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
       <h1>RPSLS</h1>
       <img src='' />
-      <img id='myChoice' src=''/><img id='botChoice' src=''/>
+      <img id='myChoice' src=''height="335px" width="335px"/><img id='botChoice' src=''/height="335px" width="335px">
       <br>
       <h3>Player Wins: <span>0</span></h3>
       <h3>Bot Wins: <span>0</span></h3>
       <h2></h2>
       <br>
-      <button value='0'>Rock</button>
-      <button value='1'>Paper</button>
-      <button value='2'>Scissors</button>
-      <button value='3'>Lizard</button>
-      <button value='4'>Spock</button>
+      <button class="button" value='0'>Rock</button>
+      <button class="button" value='1'>Paper</button>
+      <button class="button" value='2'>Scissors</button>
+      <button class="button" value='3'>Lizard</button>
+      <button class="button" value='4'>Spock</button>
 <script src="js/main.js"></script>
   </body>
 </html>
